--- a/app/src/main/res/layout/activity_data_refresh.xml
+++ b/app/src/main/res/layout/activity_data_refresh.xml
@@ -6,6 +6,10 @@
         <variable
             name="user"
             type="com.tuacy.databindingdev.simple.UserObservable" />
+
+        <variable
+            name="changeEvent"
+            type="com.tuacy.databindingdev.simple.DataRefreshActivity.ChangeClickEvent" />
     </data>
 
     <LinearLayout
@@ -20,5 +24,12 @@
             android:gravity="center"
             android:text="@{user.userName}"
             android:textSize="18sp" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:onClick="@{changeEvent.changeOnClick}"
+            android:text="通知数据改变" />
     </LinearLayout>
 </layout>
