--- a/app/src/main/res/layout/activity_data_refresh.xml
+++ b/app/src/main/res/layout/activity_data_refresh.xml
@@ -8,6 +8,10 @@
             type="com.tuacy.databindingdev.simple.UserObservable" />
 
         <variable
+            name="userField"
+            type="com.tuacy.databindingdev.simple.UserField" />
+
+        <variable
             name="changeEvent"
             type="com.tuacy.databindingdev.simple.DataRefreshActivity.ChangeClickEvent" />
     </data>
@@ -23,6 +27,14 @@
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="@{user.userName}"
+            android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@{userField.userName}"
             android:textSize="18sp" />
 
         <Button
