--- a/app/src/main/res/layout/activity_two_way_binding.xml
+++ b/app/src/main/res/layout/activity_two_way_binding.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="user"
-            type="com.tuacy.databindingdev.simple.UserObservable"/>
+            type="com.tuacy.databindingdev.entity.UserObservable"/>
 
     </data>
 
