--- a/app/src/main/res/layout/activity_include_binding.xml
+++ b/app/src/main/res/layout/activity_include_binding.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="user"
-            type="com.tuacy.databindingdev.simple.User" />
+            type="com.tuacy.databindingdev.entity.User" />
     </data>
 
     <LinearLayout
