--- a/app/src/main/res/layout/include.xml
+++ b/app/src/main/res/layout/include.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="user"
-            type="com.tuacy.databindingdev.simple.User" />
+            type="com.tuacy.databindingdev.entity.User" />
     </data>
 
     <LinearLayout
