--- a/app/src/main/res/layout/item_recycler_grid.xml
+++ b/app/src/main/res/layout/item_recycler_grid.xml
@@ -5,7 +5,7 @@
     <data class="RecyclerHolderItemBinding">
         <variable
             name="viewModel"
-            type="com.tuacy.databindingdev.recycler.ImageViewModel" />
+            type="String" />
     </data>
 
     <android.support.v7.widget.CardView
@@ -22,7 +22,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
-            app:imageUrl="@{viewModel.imageUrl}"
+            app:imageUrl="@{viewModel}"
             android:contentDescription="@string/app_name" />
 
     </android.support.v7.widget.CardView>
