--- a/app/src/main/res/layout/activity_include_binding.xml
+++ b/app/src/main/res/layout/activity_include_binding.xml
@@ -14,6 +14,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="把数据传递到include布局里面去，简单的展示出来" />
+
         <include
             layout="@layout/include"
             bind:user="@{user}" />
