--- a/app/src/main/res/layout/activity_no_find_view_by_id.xml
+++ b/app/src/main/res/layout/activity_no_find_view_by_id.xml
@@ -17,6 +17,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="不通过findViewById去找控件对象了" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
