--- a/app/src/main/res/layout/activity_simple_binding.xml
+++ b/app/src/main/res/layout/activity_simple_binding.xml
@@ -16,6 +16,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="简单的在UI显示绑定的数据"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="@{user.firstName}"
